tests/sksl/errors/Ossfuzz48592.glsl
### Compilation failed:

error: 1: expected ')' to complete expression, but found '`'
half x[int2((3-3`*cosh(421`.L1
                ^
error: 1: expected ')' to complete function arguments, but found '`'
half x[int2((3-3`*cosh(421`.L1
                          ^
error: 2: expected ')' to complete function arguments, but found ''
error: 1: array size must be an integer
half x[int2((3-3`*cosh(421`.L1
       ^^^^^^^^^^^^^^^^^^^^^^^^
error: 2: expected ']', but found ''
5 errors
